ready to submit?

--- a/r-squared-short.Rmd
+++ b/r-squared-short.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A New (Old) Goodness of Fit Metric for Multidimensional Outcomes"
 abstract: >
-  This research proposes a new (old) metric for evaluating goodness of fit. The cannonical coefficient of determination, R-squared, is useful only for outcomes in one dimension. We propose an extension of the traditional R-squared, valid when one is simultaneously predicting multiple variables. This metric is included in the mvrsquared package, currently on CRAN. We demonstrate its use in several contexts: responses with 2 and 4 dimensions, function-on-function regression, and probabilistic topic modeling. 
+  This research proposes a new (old) metric for evaluating goodness of fit. The canonical coefficient of determination, R-squared, is useful only for outcomes in one dimension. We propose an extension of the traditional R-squared, valid when one is simultaneously predicting multiple variables. This metric is included in the mvrsquared package, currently on CRAN. We demonstrate its use in several contexts: responses with 2 and 4 dimensions, function-on-function regression, and probabilistic topic modeling. 
 draft: true
 author: 
   - name: Tommy Jones
@@ -25,7 +25,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, cache = TRUE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, cache = FALSE, message = FALSE)
 
 options(tinytex.verbose = TRUE)
 
