--- a/r-squared-short.tex
+++ b/r-squared-short.tex
@@ -7,7 +7,7 @@
 \maketitle
 
 \abstract{%
-This research proposes a new (old) metric for evaluating goodness of fit. The cannonical coefficient of determination, R-squared, is useful only for outcomes in one dimension. We propose an extension of the traditional R-squared, valid when one is simultaneously predicting multiple variables. This metric is included in the mvrsquared package, currently on CRAN. We demonstrate its use in several contexts: responses with 2 and 4 dimensions, function-on-function regression, and probabilistic topic modeling.
+This research proposes a new (old) metric for evaluating goodness of fit. The canonical coefficient of determination, R-squared, is useful only for outcomes in one dimension. We propose an extension of the traditional R-squared, valid when one is simultaneously predicting multiple variables. This metric is included in the mvrsquared package, currently on CRAN. We demonstrate its use in several contexts: responses with 2 and 4 dimensions, function-on-function regression, and probabilistic topic modeling.
 }
 
 \hypertarget{introduction}{%
@@ -55,9 +55,7 @@ where \(\bar{\boldsymbol{y}}\) is the \(M\times 1\) average vector, averaging ac
 Figure \ref{fig:geometricgraphic} visualizes the geometric interpretation of \(R^2\) for outcomes in \(\mathbb{R}_2\). The left image represents \(SST\): the red dots are data points (\(\boldsymbol{y}_i\)); the black dot is the vector of means (\(\bar{\boldsymbol{y}}\)); the line segments represent the Euclidean distance from each \(\boldsymbol{y}_i\) to \(\bar{\boldsymbol{y}}\). \(SST\) is obtained by squaring the length of each line segment and then adding the squared segments together. The right image represents \(SSE\): the blue dots are the fitted values (\(\hat{\boldsymbol{y}}_i\)); the line segments represent the Euclidean distance from each \(\hat{\boldsymbol{y}}_i\) to its corresponding \(\boldsymbol{y}_i\). \(SSE\) is obtained by squaring the length of each line segment and then adding the squared segments together.
 
 \begin{figure}
-\centering
-\includegraphics{r-squared-short_files/figure-latex/geometricgraphic-1.pdf}
-\caption{\label{fig:geometricgraphic}Visualizing the geometric interpretation of R-squared. Sum up the squared length of each line segment for the total (left) or residual (right) sums of squares. This figure corresponds to an R-squared of 0.87}
+\includegraphics{r-squared-short_files/figure-latex/geometricgraphic-1} \caption{Visualizing the geometric interpretation of R-squared. Sum up the squared length of each line segment for the total (left) or residual (right) sums of squares. This figure corresponds to an R-squared of 0.87}\label{fig:geometricgraphic}
 \end{figure}
 
 One may also compute the partial \(R^2\) as in the traditional case using the formula
@@ -216,9 +214,7 @@ Model size & R-sq. & Topic & Prevalence & Part R-sq. & Top 3 words\\
 Evidence for using \(R^2\) for selecting the number of topics to model (i.e., model selection) is mixed. In a second experiment, we explore model selection on a random sample of 1,000 documents from the SBIR corpus. We fit models over a range of 50 to 300 topics---with a step size of 10---using the same specification as above. Figure \ref{fig:selecttopics} displays the \(R^2\) for each model, plotted against the number of topics. Rather than depecting a clear peak---which would be good for model selection---or a monotonically increasing curve---which would be bad---\(R^2\) flattens off at about 150 topics. Citing the principle of parsimony, perhaps \textasciitilde150 topics is a resonable choice. In an earlier work---chapter 4 of Jones (2023)---we explore using our \(R^2\) calculation for topic modeling in more detail and find similar results.
 
 \begin{figure}
-\centering
-\includegraphics{r-squared-short_files/figure-latex/selecttopics-1.pdf}
-\caption{\label{fig:selecttopics}Using R-squared to select the number of topics. Results are mixed. There is neither a peak, nor does the curve monotonically increase.}
+\includegraphics{r-squared-short_files/figure-latex/selecttopics-1} \caption{Using R-squared to select the number of topics. Results are mixed. There is neither a peak, nor does the curve monotonically increase.}\label{fig:selecttopics}
 \end{figure}
 
 Also discussed in Jones (2023) \(R^2\) for multidimensional outcomes applied to topic models is invariant to most properties of the underlying data save one, document length. Shorter documents tend to produce data sets with higher variance in word frequencies across documents. As a result, \(R^2\) tends to be lower, owning to the fact that one is modeling noisier data, consistent with the behavior of traditional \(R^2\).
