--- a/r-squared-short.bib
+++ b/r-squared-short.bib
@@ -73,14 +73,15 @@ journal = {Proceedings of the National Institute of Sciences of India},
 pages = {49---55}, 
 number = {1}, 
 volume = {2}, 
-local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/2021-01-30/Vol02_1936_1_Art05.pdf}
+url = {https://www.jstor.org/stable/48723335}
 }
 
 @book{mcfadden1977application,
   title={An application of diagnostic tests for the independence from irrelevant alternatives property of the multinomial logit model},
   author={McFadden, Daniel and Tye, William B and Train, Kenneth},
   year={1977},
-  publisher={Institute of Transportation Studies, University of California}
+  publisher={Institute of Transportation Studies, University of California},
+  url={https://onlinepubs.trb.org/Onlinepubs/trr/1977/637/637-007.pdf}
 }
 
 @book{cox1989analysis,
@@ -88,7 +89,8 @@ local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/refer
   author={Cox, DR and Snell, EJ},
   volume={32},
   year={1989},
-  publisher={CRC Press}
+  publisher={CRC Press},
+  url={https://www.taylorfrancis.com/books/mono/10.1201/9781315137391/analysis-binary-data-cox}
 }
 
 @article {hellinger1909new,
@@ -99,7 +101,8 @@ local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/refer
   number = {136},
   pages = {210--271},
   year = {1909},
-  publisher = {De Gruyter}
+  publisher = {De Gruyter},
+  doi={10.1515/crll.1909.136.210}
 }
 
 @online{mvrsquared,
@@ -131,7 +134,7 @@ title = {{Latent Dirichlet Allocation}},
 author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.}, 
 journal = {Journal of Machine Learning Research}, 
 volume = {3}, 
-local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/download%202020-06-22/blei03a.pdf}, 
+url = {https://www.jmlr.org/papers/volume3/blei03a/blei03a.pdf}, 
 year = {2003}
 }
 
@@ -174,7 +177,8 @@ year = {2019}
   title={Latent Dirichlet Allocation for Natural Language Statistics},
   author={Tommy Jones},
   year={2023},
-  school={George Mason University}
+  school={George Mason University},
+  url = {https://search.proquest.com/openview/6faa6a9b42439199c0aab36178ce2cb2/1?pq-origsite=gscholar&cbl=18750&diss=y&casa_token=eG1q9yom3e0AAAAA:BevR2mMQvRws_2VWJZXGMEhAdY5A2wXUQqfvVC183QRUA-CEm-5d3fffix62Jdx1Eg4RMyU09aM}
 }
 
 
@@ -184,7 +188,8 @@ year = {2019}
  year	 	= {2007},
  publisher 	= {Pearson Prentice Hall},
  edition	= {6$^{\text{th}}$},
- address 	= {Upper Saddle River, NJ, USA}
+ address 	= {Upper Saddle River, NJ, USA},
+ url = {https://www.academia.edu/download/31202179/Dr_Alodat_STAT_459_L01_Spring_2012.pdf}
 }
 
 @article{Rudorfer1982,
