--- a/r-squared-short.tex
+++ b/r-squared-short.tex
@@ -386,22 +386,22 @@ Viewing \(R^2\) as a ratio of distances motivates a new direction for extended d
 Barten, Anton P. 1987. {``{The Coeffecient of Determination for Regression without a Constant Term}.''} In \emph{The Practice of Econometrics}, edited by Heijmans R. and Neudecker H., 15:187---189. International Studies in Economics and Econometrics. Springer, Dordrecht. \url{https://doi.org/10.1007/978-94-009-3591-4/_12}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-blei2002lda}{}}%
-Blei, David M., Andrew Y. Ng, and Michael I. Jordan. 2003. {``{Latent Dirichlet Allocation}.''} \emph{Journal of Machine Learning Research} 3.
+Blei, David M., Andrew Y. Ng, and Michael I. Jordan. 2003. {``{Latent Dirichlet Allocation}.''} \emph{Journal of Machine Learning Research} 3. \url{https://www.jmlr.org/papers/volume3/blei03a/blei03a.pdf}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-windmeijer1997}{}}%
 Cameron, A. Colin, and Frank A. G. Windmeijer. 1997. {``{An R-squared measure of goodness of fit for some common nonlinear regression models}.''} \emph{Journal of Econometrics} 77 (2): 329--42. \url{https://doi.org/10.1016/s0304-4076(96)01818-0}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-cox1989analysis}{}}%
-Cox, DR, and EJ Snell. 1989. \emph{Analysis of Binary Data}. Vol. 32. CRC Press.
+Cox, DR, and EJ Snell. 1989. \emph{Analysis of Binary Data}. Vol. 32. CRC Press. \url{https://www.taylorfrancis.com/books/mono/10.1201/9781315137391/analysis-binary-data-cox}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Harezlak2007}{}}%
 Harezlak, J., B. A. Coull, N. M. Laird, S. R. Magari, and D. C. Christiani. 2007. {``Penalized Solutions to Functional Regression Problems.''} \emph{Computational Statistics \& Data Analysis} 51: 4911--25. \url{https://doi.org/10.1016/j.csda.2006.09.034}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-hellinger1909new}{}}%
-Hellinger, Ernst. 1909. {``New Definition of the Theory of Quadratic Forms of Infinitely Many Different {~"a} Changes.''} \emph{Journal f {~"u} r Pure and Applied Mathematics} 1909 (136): 210--71.
+Hellinger, Ernst. 1909. {``New Definition of the Theory of Quadratic Forms of Infinitely Many Different {~"a} Changes.''} \emph{Journal f {~"u} r Pure and Applied Mathematics} 1909 (136): 210--71. \url{https://doi.org/10.1515/crll.1909.136.210}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-JohnsonWichern2007}{}}%
-Johnson, R. A., and D. W. Wichern. 2007. \emph{Applied Multivariate Statistical Analysis}. 6\^{}\{\textbackslash text\{th\}\} ed. Upper Saddle River, NJ, USA: Pearson Prentice Hall.
+Johnson, R. A., and D. W. Wichern. 2007. \emph{Applied Multivariate Statistical Analysis}. 6\^{}\{\textbackslash text\{th\}\} ed. Upper Saddle River, NJ, USA: Pearson Prentice Hall. \url{https://www.academia.edu/download/31202179/Dr_Alodat_STAT_459_L01_Spring_2012.pdf}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-mvrsquared}{}}%
 Jones, Tommy. 2020a. {``Mvrsquared.''} 2020. \url{https://CRAN.R-project.org/package=mvrsquared}.
@@ -410,16 +410,16 @@ Jones, Tommy. 2020a. {``Mvrsquared.''} 2020. \url{https://CRAN.R-project.org/pac
 ---------. 2020b. {``{tidylda}.''} \url{https://github.com/TommyJones/tidylda}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-jones2023latent}{}}%
----------. 2023. {``Latent Dirichlet Allocation for Natural Language Statistics.''} PhD thesis, George Mason University.
+---------. 2023. {``Latent Dirichlet Allocation for Natural Language Statistics.''} PhD thesis, George Mason University. \url{https://search.proquest.com/openview/6faa6a9b42439199c0aab36178ce2cb2/1?pq-origsite=gscholar\&cbl=18750\&diss=y\&casa_token=eG1q9yom3e0AAAAA:BevR2mMQvRws_2VWJZXGMEhAdY5A2wXUQqfvVC183QRUA-CEm-5d3fffix62Jdx1Eg4RMyU09aM}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-mahalanobis}{}}%
-Mahalanobis, Prasanta Chandra. 1936. {``{On the Generalized Distance In Statistics}.''} \emph{Proceedings of the National Institute of Sciences of India} 2 (1): 49---55.
+Mahalanobis, Prasanta Chandra. 1936. {``{On the Generalized Distance In Statistics}.''} \emph{Proceedings of the National Institute of Sciences of India} 2 (1): 49---55. \url{https://www.jstor.org/stable/48723335}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Malfait2003}{}}%
 Malfait, N., and J. O. Ramsay. 2003. {``The Historical Functional Linear Model.''} \emph{The Canadian Journal of Statistics} 31: 115--28. \url{https://doi.org/10.2307/3316063}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-mcfadden1977application}{}}%
-McFadden, Daniel, William B Tye, and Kenneth Train. 1977. \emph{An Application of Diagnostic Tests for the Independence from Irrelevant Alternatives Property of the Multinomial Logit Model}. Institute of Transportation Studies, University of California.
+McFadden, Daniel, William B Tye, and Kenneth Train. 1977. \emph{An Application of Diagnostic Tests for the Independence from Irrelevant Alternatives Property of the Multinomial Logit Model}. Institute of Transportation Studies, University of California. \url{https://onlinepubs.trb.org/Onlinepubs/trr/1977/637/637-007.pdf}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Meyer2023}{}}%
 Meyer, M. J. 2023. {``Advances in Estimation and Inference for Historical Functional Linear Models.''} \emph{WIREs Computational Statistics}, e1627. \url{https://doi.org/10.1002/wics.1627}.
